@@ -20,6 +20,10 @@ The rules for this file:
   * 2.0.0
 
 Fixes
+  * PDB parser now assigns empty records for partially missing/invalid elements
+    instead of not assigning the elements attribute at all (Issue #2422)
+  * PDB writer now uses elements attribute instead of guessing elements from
+    atom name (Issue #2423)
   * AtomGroup.center now works correctly for compounds + unwrapping
     (Issue #2984)
   * Avoid using deprecated array indexing in topology attributes
